# py_chunk_in_memory

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: index.md
src/py_chunk_in_memory/: __init__.py  chunkers.py  main.py  models.py  parsers.py  preprocessors.py  tokenizers.py
tests/: test_chunk_dataclass.py  test_chunkers.py  test_chunkers_edge_cases.py  test_main.py  test_models.py  test_parsers.py  test_preprocessors.py  test_sentence_chunker.py  test_structure_aware_chunker.py  test_tokenizers.py
