[tool.poetry]
name = "py_chunk_in_memory"
version = "0.1.0"
description = "A state-of-the-art Python package for advanced, in-memory text segmentation (chunking). Optimized for RAG, it provides modular strategies (Semantic, Structure-Aware, Hierarchical), precise tokenization, and rich metadata preservation."
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "py_chunk_in_memory", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "py_chunk_in_memory"
version = "0.1.0"
description = "A state-of-the-art Python package for advanced, in-memory text segmentation (chunking). Optimized for RAG, it provides modular strategies (Semantic, Structure-Aware, Hierarchical), precise tokenization, and rich metadata preservation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/py_chunk_in_memory"
Repository = "https://github.com/CoReason-AI/py_chunk_in_memory"
Documentation = "https://github.com/CoReason-AI/py_chunk_in_memory"
